[package]
name = "advent-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
regex = "1.11.1"

[lints.clippy]
pedantic = {level = "warn", priority = -1}
nursery = {level = "warn", priority = -1}
suboptimal_flops = "allow"

[dev-dependencies]
test-case = "3.3.1"
